<resources>
    <string name="app_name">HotelReservation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_string">Отель</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="room_name">Стандартный с видом на бассейн или сад</string>
    <string name="long_long_long_hotel_location">Long Long Long Hotel Location</string>
    <string name="hotel_price">от 134 673 ₽</string>
    <string name="additional_title">за тур с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="vip_18">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="conveniences">Удобства</string>
    <string name="conveniences_description">Самое необходимое</string>
    <string name="included">Что включено</string>
    <string name="included_description">Самое необходимое</string>
    <string name="excluded">Что не включено</string>
    <string name="excluded_description">Самое необходимое</string>
    <string name="choose_number">Выбрать номер</string>
    <string name="to_choose_number">К выбору номера</string>
    <string name="image_for_presenting_hotel">image for presenting hotel</string>
    <string name="madinat_makadi_safaga_road_makadi_bay">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="open_content">open content</string>
    <string name="_5">5 Превосходно</string>

    <string name="from_string">"от %1$s"</string>
    <string name="about_room">Подробнее о номере</string>
    <string name="additional_about_room">Подробнее о номере</string>
    <string name="currency">%1$s ₽</string>
    <string name="from">Вылет из</string>
    <string name="nights">" ночей"</string>
    <string name="info_about_buyer">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string-array name="booking_info">
        <item>Вылет из</item>
        <item>Страна, город</item>
        <item>Даты</item>
        <item>Кол-во ночей</item>
        <item>Отель</item>
        <item>Номер</item>
        <item>Питание</item>
    </string-array>
    <string-array name="numbers">
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвёрты</item>
        <item>Пятый</item>
        <item>Шестой</item>
        <item>Седьмой</item>
        <item>Восьмой</item>
        <item>Девятый</item>
        <item>Десятый</item>
        <item>Одинадцатый</item>
        <item>Двенадцатый</item>
        <item>Тренадцатый</item>
        <item>Четырнадцатый</item>
        <item>Пятнадцатый</item>
    </string-array>
    <string name="tourist_number">%1$s турист</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="validity_period">Срок действия загранпаспорта</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="navigate_back">navigate back</string>
    <string name="tour">Тур</string>
    <string name="fuel_fee">Топливный сбор</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="to_payment">К оплате</string>
    <string name="payment">Оплатить %1$s ₽</string>
    <string name="hotel">Отель</string>
    <string name="reservation">Бронирование</string>
    <string name="success">Заказ оплачен</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="order_text">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="super_btn_text">Супер!</string>
    <string name="user_agreement">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="alert_dialog_positive_btn_text">Try again</string>
    <string name="alert_dialog_negative_btn_text">Back</string>
</resources>