<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="38dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    tools:targetApi="p">

    <ImageView
        android:id="@+id/includedImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/included_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19.2dp"
        android:lineHeight="19.2dp"
        android:text="@string/included"
        android:textFontWeight="500"
        android:fontFamily="@font/sf_pro_display_bold_500"
        android:textColor="@color/secondary_dark"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/includedImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="16.8dp"
        android:textFontWeight="500"
        android:fontFamily="@font/sf_pro_display_bold_500"
        android:textSize="14sp"
        android:lineHeight="16.8dp"
        android:textColor="@color/secondary_light"
        android:layout_marginStart="12dp"
        android:text="@string/included_description"
        app:layout_constraintStart_toEndOf="@id/includedImage"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/open_content" />

</androidx.constraintlayout.widget.ConstraintLayout>