<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:targetApi="p">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/dotsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:minHeight="17dp"
        android:background="@drawable/dot_indicator_background"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imagesRecyclerView"
        tools:targetApi="s">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/starts_background_outline"
        android:clipToOutline="true"
        tools:targetApi="s"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imagesRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="29dp"
        android:minWidth="149dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:importantForAccessibility="no"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"/>

        <TextView
            android:id="@+id/starsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_pro_display_bold_500"
            android:textColor="@color/stars_text"
            android:textSize="16sp"
            android:lineHeight="19.2dp"
            android:text="@string/_5"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/hotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineHeight="26.4dp"
        android:ellipsize="end"
        android:text="@string/hotel_name"
        android:textFontWeight="500"
        android:fontFamily="@font/sf_pro_display_bold_500"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primary_color" />

    <TextView
        android:id="@+id/hotelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_pro_display_bold_500"
        android:textSize="14sp"
        android:lineHeight="16.8dp"
        android:text="@string/madinat_makadi_safaga_road_makadi_bay"
        android:textColor="@color/primary_light"
        app:layout_constraintTop_toBottomOf="@id/hotelName"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/priceLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hotelLocation"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textFontWeight="600"
            android:fontFamily="@font/sf_pro_display_bold_600"
            android:textSize="30sp"
            android:textColor="@color/primary_color"
            android:lineHeight="36dp"
            android:text="@string/hotel_price" />

        <TextView
            android:id="@+id/additionalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:layout_weight="400"
            android:textSize="16sp"
            android:lineHeight="19.2dp"
            android:textFontWeight="100"
            android:layout_marginStart="8dp"
            android:text="@string/additional_title"
            android:textColor="@color/secondary_light"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>