<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="p"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/name"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/surname"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/date_of_birth"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/citizenship"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/citizenship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/passport_number"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passportNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/validity_period"
        app:hintTextColor="@color/about_hotel_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:background="@color/background"
        app:boxStrokeColor="@color/background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/validityPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textAppearance="@font/sf_pro_display_bold_400"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:letterSpacing="0.25"
            android:lineHeight="17.6dp"/>

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>