<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="p">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineHeight="26.4dp"
        android:ellipsize="end"
        android:text="@string/info_about_buyer"
        android:textFontWeight="500"
        android:fontFamily="@font/sf_pro_display_bold_500"
        android:textSize="22sp"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/te_background"
        android:inputType="phone"
        android:textAppearance="@font/sf_pro_display_bold_400"
        android:fontFamily="@font/sf_pro_display_bold_400"
        android:textColorHint="@color/primary_color"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        android:lineHeight="17.6dp"
        android:cursorVisible="false"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:background="@color/input_background"
        android:textAppearance="@font/sf_pro_display_bold_400"
        android:fontFamily="@font/sf_pro_display_bold_400"
        android:textColorHint="@color/primary_color"
        android:textColor="@color/primary_color"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        android:lineHeight="17.6dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/emailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/tourists_info_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>