<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/hotelImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/starsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/images_recycler_view"/>

        <LinearLayout
            android:id="@+id/starsLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:layout_marginTop="16dp"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@id/hotelImages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hotelName">

            <include
                android:id="@+id/rootLayout"
                layout="@layout/stars_layout" />

        </LinearLayout>

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="26.4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/hotel_name"
            android:textFontWeight="500"
            android:fontFamily="@font/sf_pro_display_bold_500"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/hotelLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starsLayout"
            android:textColor="@color/primary_color" />

        <TextView
            android:id="@+id/hotelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_pro_display_bold_500"
            android:textSize="14sp"
            android:lineHeight="16.8dp"
            android:text="@string/madinat_makadi_safaga_road_makadi_bay"
            android:textColor="@color/primary_light"
            app:layout_constraintTop_toBottomOf="@id/hotelName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hotelPrice"
            android:clickable="true"
            android:focusable="true" />


        <TextView
            android:id="@+id/hotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textFontWeight="600"
            android:fontFamily="@font/sf_pro_display_bold_600"
            android:textSize="30sp"
            android:textColor="@color/primary_color"
            android:lineHeight="36dp"
            android:text="@string/hotel_price"
            app:layout_constraintTop_toBottomOf="@+id/hotelLocation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/additionalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold_400"
            android:layout_marginStart="8dp"
            android:text="@string/additional_title"
            android:textColor="@color/secondary_light"
            app:layout_constraintStart_toEndOf="@id/hotelPrice"
            app:layout_constraintBottom_toBottomOf="@id/hotelPrice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hotelPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/aboutHotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_hotel"
                    android:fontFamily="@font/sf_pro_display_bold_500"
                    android:textColor="@color/primary_color"
                    android:textFontWeight="500"
                    android:textSize="22sp"
                    android:lineHeight="26.4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutHotel" />

                <TextView
                    android:id="@+id/hotelDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_18"
                    android:textFontWeight="400"
                    android:textColor="@color/primary_color"
                    android:fontFamily="@font/sf_pro_display_bold_400"
                    android:textSize="16sp"
                    android:lineHeight="19.2dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/chipGroup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:id="@+id/hotelInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/hotelDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <include layout="@layout/hotel_conveniences_item"/>
                    <include layout="@layout/hotel_included_item"/>
                    <include layout="@layout/hotel_excluded_item" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <Button
                android:id="@+id/selectRoomBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sf_pro_display_bold_500"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:lineHeight="17.6dp"
                android:letterSpacing="0.1"
                android:text="@string/choose_number"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>